Implement virtualHasProperty for QQmValueTypeWrapper

We do not have to use the generic path, given that we can just query the
meta-object for the existence of the property.

Task-number: QTBUG-104803
Change-Id: I9c4f7f8752e0cd8cfd63189538d6ca42523b3587
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>